<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="carlos.nicolau.galves.androidcwb.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">

        <View
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/prompt_password"

            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="40dp"
            android:background="@color/white"
            android:text="@string/action_sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/kitkat"
            android:layout_marginTop="40dp"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/kitkat_v2"
            android:layout_marginLeft="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/nougat"
            android:layout_marginTop="60dp"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/nougat_v2"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kitkat" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/lollypop"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/lollypop_v2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/marshmallow"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/marshmallow_v2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lollypop"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="70dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/oreo"
            android:layout_marginTop="30dp"
            android:adjustViewBounds="true"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:src="@drawable/oreo_v2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/marshmallow"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="70dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/alpha"
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/alpha_v2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="60dp"
            android:layout_height="100dp"
            android:id="@+id/froyo"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/froyo_v2"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/alpha" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/eclair"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="80dp"
            android:adjustViewBounds="true"
            android:src="@drawable/eclair_v2"
            android:layout_marginLeft="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/froyo" />




        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cupcake"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/cupcake_v2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/donut"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="120dp"
            android:adjustViewBounds="true"
            android:src="@drawable/donut_v2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cupcake" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/gingerbread"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="120dp"
            android:adjustViewBounds="true"
            android:src="@drawable/gingerbread_v2"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/donut" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/honey"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:src="@drawable/honey_v2"
            app:layout_constraintTop_toBottomOf="@id/jellybean"
            app:layout_constraintLeft_toRightOf="@+id/froyo"
             />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ice_cream"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ice_cream_v2"
            app:layout_constraintTop_toBottomOf="@id/honey"
            app:layout_constraintLeft_toRightOf="@+id/froyo"
            app:layout_constraintRight_toLeftOf="@+id/donut"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/jellybean"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:src="@drawable/jellybean_v2"
            app:layout_constraintLeft_toRightOf="@+id/alpha"
            app:layout_constraintRight_toLeftOf="@+id/cupcake"
            app:layout_constraintTop_toBottomOf="@id/password" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>